fix video display on mobile

--- a/FDSweb/home/static/css/styles.css
+++ b/FDSweb/home/static/css/styles.css
@@ -10939,12 +10939,31 @@ hr.divider-light {
   }
 }
 
+@media (max-width: 992px) {
+  #bg_video_in {
+    right: 0;
+    bottom: 0;
+    min-height: 100% !important;
+  }
+
+  #bg_video {
+    overflow: hidden !important;
+    height: 100%;
+    width: 100%;
+  }
+}
+
 #bg_video {
-  /* position: fixed; */
-  right: 0;
-  bottom: 0;
-  min-width: 100% !important;
-  min-height: 100% !important;
+/* position: fixed; */
+right: 0;
+bottom: 0;
+min-width: 100% !important;
+min-height: 100% !important;
+}
+
+#bg_video_in {
+min-width: 100% !important;
+min-height: 100% !important;
 }
 
 #logo2 {
